fix footer controls spacing

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,3 +5,8 @@
 html {
     overflow: hidden !important;
 }
+
+.chat-container {
+    height: calc(var(--vh, 1vh) * 100);
+    /*margin-top: 50px;*/
+}
